fix: Eliminar referencia a precios en testimonio
- Actualizado testimonio de Carlos Ruiz para eliminar mención de precios
- Enfoque en beneficios del sistema sin mencionar costes

--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
           <div class="testimonial-role">Gerente, Hostal Centro Málaga</div>
         </div>
         <div class="testimonial">
-          <div class="testimonial-text">El precio es imbatible: 4€ por propiedad. Otros PMS nos cobraban 50€/mes. La gestión manual es perfecta para nosotros, tenemos control total.</div>
+          <div class="testimonial-text">La gestión manual es perfecta para nosotros, tenemos control total. El sistema es intuitivo y nos permite gestionar todo desde un solo lugar sin complicaciones.</div>
           <div class="testimonial-author">Carlos Ruiz</div>
           <div class="testimonial-role">Propietario, Apartamentos Costa del Sol</div>
         </div>
