fix: Eliminar todas las referencias a precios y planes de pago
- Actualizada meta description: ahora menciona 'gratis para siempre'
- Cambiada FAQ de cancelación por FAQ sobre si es realmente gratis
- Actualizado schema.org para reflejar plan gratuito
- Eliminadas referencias a planes mensuales/anuales y precios

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <title>Delfín Check‑in · Software de gestión hotelera y auto check‑in</title>
-  <meta name="description" content="Delfín Check‑in: software para hoteles y alojamientos con reservas, check‑in online, gestión de habitaciones y panel de administración sencillo. Plan mensual o anual.">
+  <meta name="description" content="Delfín Check‑in: software gratuito para hoteles y alojamientos con reservas, check‑in online, gestión de habitaciones y panel de administración sencillo. Gratis para siempre.">
   <meta name="keywords" content="software hotel, channel manager, check-in online, PMS, reservas, gestión de hoteles, motor de reservas, sistema hotelero, gestión de alojamientos, check-in automático, reservas online, panel administración hotel, software gestión hotelera España, sistema reservas hoteles, gestión habitaciones hotel, check-in digital hotel, software hotelero profesional, sistema gestión alojamientos turísticos, plataforma hotelera, software para hostales, gestión reservas hoteles, sistema check-in online, software hotelero completo, gestión hotelera digital, sistema reservas alojamientos, software gestión turística, plataforma gestión hotelera, sistema hotelero integrado, software para hoteles pequeños, gestión digital hoteles">
   <meta name="author" content="Delfín Check-in">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
@@ -113,28 +113,15 @@
         "offers": [
           {
             "@type": "Offer",
-            "name": "Plan Mensual",
-            "description": "Plan mensual desde 14,99€ por propiedad",
-            "price": "14.99",
+            "name": "Plan Gratuito",
+            "description": "PMS completamente gratuito para siempre",
+            "price": "0",
             "priceCurrency": "EUR",
             "priceSpecification": {
               "@type": "UnitPriceSpecification",
-              "price": "14.99",
+              "price": "0",
               "priceCurrency": "EUR",
-              "unitText": "por propiedad por mes"
-            }
-          },
-          {
-            "@type": "Offer",
-            "name": "Plan Anual",
-            "description": "Plan anual con descuento del 16.7%",
-            "price": "149.90",
-            "priceCurrency": "EUR",
-            "priceSpecification": {
-              "@type": "UnitPriceSpecification",
-              "price": "149.90",
-              "priceCurrency": "EUR",
-              "unitText": "por propiedad por año"
+              "unitText": "gratis para siempre"
             }
           }
         ],
@@ -1440,10 +1427,10 @@
     <section id="faq" class="section container">
       <h2>Preguntas frecuentes</h2>
       <details>
-        <summary>¿Puedo cancelar cuando quiera?</summary>
+        <summary>¿Es realmente gratis?</summary>
         <p>
-          Sí. El plan mensual funciona como una suscripción sin permanencia: puedes darte de baja en cualquier momento desde el panel o solicitándolo a soporte, y no se te volverán a emitir cargos a partir del siguiente ciclo. 
-          Si eliges el plan anual, disfrutas de un precio reducido y la licencia permanece activa durante 12 meses completos; al finalizar el periodo puedes renovar o cambiarte a mensual sin penalización.
+          Sí, Delfín Check-in es completamente gratuito para siempre. No hay costes ocultos, no hay límites de tiempo, y no necesitas cancelar nada porque nunca te cobraremos. 
+          Puedes usar todas las funcionalidades del sistema sin restricciones: gestión de reservas, check-in online, registro de viajeros, app móvil y más.
         </p>
       </details>
       <details>
