fix: Actualizar FAQ sobre Ministerio del Interior

--- a/index.html
+++ b/index.html
@@ -1397,8 +1397,7 @@
         <summary>¿Cuándo estará disponible el módulo de check-in?</summary>
         <p>
           Estamos en fase de pre-lanzamiento. El módulo de check-in estará disponible próximamente con un coste de 8€ al mes. 
-          y los envía por email o FTP según tu configuración. También puedes descargarlos manualmente y enviarlos 
-          a través de tu canal preferido.
+          Te avisaremos por email cuando el módulo de check-in esté disponible. Los primeros usuarios podrán probarlo gratis.
         </p>
       </details>
       <details>
