--- a/index.html
+++ b/index.html
@@ -1060,8 +1060,8 @@
 
 
     <section id="caracteristicas" class="section container">
-      <h2 data-es="Todo lo que necesitas para el día a día" data-en="Everything you need for daily operations">Todo lo que necesitas para el día a día</h2>
-      <p class="lead" data-es="Simplifica tareas repetitivas y mejora la experiencia del huésped. Crea reservas manualmente desde Delfín Check-in o contrata el <strong>Plan Pro</strong> para sincronizarte con Booking, Airbnb, Expedia y otras OTAs." data-en="Simplify repetitive tasks and improve guest experience. Create reservations manually from Delfín Check-in or upgrade to the <strong>Pro Plan</strong> to sync with Booking, Airbnb, Expedia and other OTAs.">Simplifica tareas repetitivas y mejora la experiencia del huésped. Crea reservas manualmente desde Delfín Check-in o contrata el <strong>Plan Pro</strong> para sincronizarte con Booking, Airbnb, Expedia y otras OTAs.</p>
+      <h2 data-es="Construido por propietarios, para propietarios" data-en="Built by owners, for owners">Construido por propietarios, para propietarios</h2>
+      <p class="lead" data-es="Sabemos exactamente qué necesitas porque hemos estado en tu lugar. Este PMS nace de la frustración con sistemas caros y complicados. Por eso es <strong>gratis, simple y potente</strong>." data-en="We know exactly what you need because we've been in your shoes. This PMS was born from frustration with expensive and complicated systems. That's why it's <strong>free, simple and powerful</strong>.">Sabemos exactamente qué necesitas porque hemos estado en tu lugar. Este PMS nace de la frustración con sistemas caros y complicados. Por eso es <strong>gratis, simple y potente</strong>.</p>
       <div class="features-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin: 30px 0;">
         <style>
           .feature-card:hover {
@@ -1074,7 +1074,7 @@
             <div style="background: #3b82f6; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">1</div>
             <h3 style="margin: 0; color: #1e40af; font-size: 18px;">Gestión de reservas</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Crea reservas manuales desde el panel web o activa el <strong>Plan Pro</strong> para conectarte con Booking, Airbnb, Expedia y cualquier OTA donde esté tu alojamiento.</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Gestiona todas tus reservas desde un panel web intuitivo. Crea reservas manualmente, organiza tu calendario y controla tu inventario de forma sencilla.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #10b981; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
@@ -1090,7 +1090,7 @@
             <div style="background: #f59e0b; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">3</div>
             <h3 style="margin: 0; color: #d97706; font-size: 18px;">Pre‑check‑in online</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Enviar enlace al huésped para completar datos antes de llegar</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Módulo de check-in digital disponible próximamente (8€/mes). Permite a tus huéspedes completar su información antes de llegar.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #8b5cf6; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
@@ -1098,7 +1098,7 @@
             <div style="background: #8b5cf6; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">4</div>
             <h3 style="margin: 0; color: #7c3aed; font-size: 18px;">App móvil Android &amp; iPhone</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Consulta reservas, check-ins y avisos desde la aplicación nativa para iOS y Android. Recibe notificaciones push y actualiza estados en tiempo real.</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Aplicaciones móviles nativas para iOS y Android <strong>en desarrollo</strong>. Próximamente podrás gestionar todo desde tu móvil con notificaciones en tiempo real.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #ef4444; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
@@ -1117,8 +1117,8 @@
           <p style="margin: 0; color: #64748b; line-height: 1.5;">CSV/Excel para contabilidad y declaración de renta</p>
         </div>
       </div>
-      <div class="note" style="margin-top:12px; padding:12px; background:#f0f9ff; border:1px solid #bae6fd; border-radius:8px;">
-        <strong>Nota sobre integraciones:</strong> Sincronizamos calendarios mediante iCal (importación/exportación) con canales como Booking y Airbnb. Puedes crear reservas manualmente y mantener el calendario actualizado.
+      <div class="note" style="margin-top:12px; padding:12px; background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border:2px solid #f59e0b; border-radius:8px;">
+        <strong>🚀 En desarrollo:</strong> Estamos trabajando en integraciones con Booking, Airbnb y otras OTAs mediante iCal. Las aplicaciones móviles también están en desarrollo. <strong>Regístrate para ser de los primeros en probarlo cuando esté listo.</strong>
       </div>
     </section>
 
@@ -1142,23 +1142,29 @@
     </section>
 
     <!-- Registro Pre-lanzamiento -->
-    <section id="registro" class="section container" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px;">
+    <section id="registro" class="section container" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
       <div style="text-align: center; color: white; margin-bottom: 32px;">
-        <h2 style="color: white; margin-bottom: 16px; font-size: 36px; font-weight: 800;">🐬 Delfín Check-in - Pre-lanzamiento</h2>
-        <p class="lead" style="color: rgba(255,255,255,0.95); font-size: 20px; line-height: 1.6; margin-bottom: 12px;">
-          El PMS es completamente <strong>gratis para siempre</strong>. El módulo de check-in tendrá un coste de <strong>8€ al mes</strong>.
+        <div style="font-size: 64px; margin-bottom: 16px;">🐬</div>
+        <h2 style="color: white; margin-bottom: 16px; font-size: 42px; font-weight: 900; text-shadow: 0 4px 12px rgba(0,0,0,0.2);">El PMS que estabas esperando</h2>
+        <p class="lead" style="color: rgba(255,255,255,0.95); font-size: 22px; line-height: 1.6; margin-bottom: 16px; font-weight: 600;">
+          <strong>Gratis para siempre.</strong> De propietarios, para propietarios.
         </p>
-        <p style="color: rgba(255,255,255,0.9); font-size: 16px; margin-top: 12px;">
-          Estamos en fase de pre-lanzamiento. Regístrate con tu email y te avisaremos cuando esté listo para que seas uno de los primeros en usarlo gratis.
+        <p style="color: rgba(255,255,255,0.9); font-size: 18px; margin-top: 12px; line-height: 1.6;">
+          Estamos en la fase final de desarrollo. <strong>Regístrate ahora</strong> y sé de los primeros en probarlo cuando lancemos. 
+          <br><strong style="font-size: 20px;">Los primeros usuarios lo tendrán gratis, incluyendo el módulo de check-in.</strong>
         </p>
+        <div style="margin-top: 24px; padding: 16px; background: rgba(255,255,255,0.15); border-radius: 12px; backdrop-filter: blur(10px);">
+          <p style="margin: 0; font-size: 16px; font-weight: 600;">📱 Apps móviles en desarrollo | 🔄 Integraciones próximamente | 💯 100% Gratis</p>
+        </div>
       </div>
       
       <div class="card" style="background: white; max-width: 600px; margin: 0 auto; padding: 32px;">
         <div style="text-align: center; margin-bottom: 24px;">
-          <div style="font-size: 48px; margin-bottom: 12px;">🚀</div>
-          <h3 style="color: #0f172a; font-size: 24px; font-weight: 700; margin-bottom: 8px;">Únete a la lista de espera</h3>
-          <p style="color: #64748b; font-size: 16px;">
-            Regístrate ahora y sé de los primeros en probar Delfín Check-in cuando esté disponible
+          <div style="font-size: 48px; margin-bottom: 12px;">🎯</div>
+          <h3 style="color: #0f172a; font-size: 28px; font-weight: 800; margin-bottom: 8px;">Sé de los primeros</h3>
+          <p style="color: #64748b; font-size: 18px; line-height: 1.6;">
+            Únete a la lista de espera y recibe acceso prioritario cuando lancemos. 
+            <strong style="color: #2563eb;">Los primeros usuarios lo tendrán todo gratis.</strong>
           </p>
         </div>
         
@@ -1193,7 +1199,7 @@
             onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 16px rgba(37, 99, 235, 0.4)'"
             onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(37, 99, 235, 0.3)'"
           >
-            <span id="waitlistSubmitText">📧 Registrarme en Pre-lanzamiento</span>
+            <span id="waitlistSubmitText">🚀 Quiero ser de los primeros</span>
             <span id="waitlistLoading" style="display: none;">Enviando...</span>
           </button>
           <p id="waitlistMessage" style="margin: 0; padding: 12px; border-radius: 8px; display: none; text-align: center; font-size: 14px;"></p>
@@ -1203,16 +1209,17 @@
           <div style="display: flex; align-items: start; gap: 12px;">
             <div style="font-size: 24px;">ℹ️</div>
             <div>
-              <h4 style="margin: 0 0 8px 0; color: #1e40af; font-weight: 700; font-size: 16px;">Información importante</h4>
-              <ul style="margin: 0; padding-left: 20px; color: #1e40af; font-size: 14px; line-height: 1.8;">
-                <li><strong>PMS completamente gratis</strong> para siempre</li>
-                <li>Módulo de <strong>check-in: 8€ al mes</strong> (opcional)</li>
-                <li>Gestión completa de reservas</li>
-                <li>Gestión de habitaciones</li>
-                <li>App móvil para iOS y Android</li>
-                <li>Soporte por email</li>
-                <li>Te avisaremos por email cuando esté listo</li>
-                <li>Los primeros usuarios podrán probarlo gratis</li>
+              <h4 style="margin: 0 0 8px 0; color: #1e40af; font-weight: 700; font-size: 18px;">✨ Lo que incluye el PMS (gratis para siempre)</h4>
+              <ul style="margin: 0; padding-left: 20px; color: #1e40af; font-size: 15px; line-height: 2;">
+                <li><strong>✅ Gestión completa de reservas</strong> - Sin límites</li>
+                <li><strong>✅ Gestión de habitaciones</strong> - Control total</li>
+                <li><strong>✅ Exportación de datos</strong> - CSV/Excel</li>
+                <li><strong>✅ Panel de administración</strong> - Intuitivo y potente</li>
+                <li><strong>✅ Soporte por email</strong> - Siempre disponible</li>
+                <li><strong>🔄 Check-in digital</strong> - 8€/mes (próximamente, gratis para primeros usuarios)</li>
+                <li><strong>🔄 App móvil</strong> - iOS y Android (en desarrollo)</li>
+                <li><strong>🔄 Integraciones OTA</strong> - Booking, Airbnb (próximamente)</li>
+                <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid #bae6fd;"><strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: TODO GRATIS (incluyendo check-in)</strong></li>
               </ul>
             </div>
           </div>
@@ -1280,20 +1287,29 @@
       <h2>Lo que dicen nuestros clientes</h2>
       <p class="lead">Hostales y apartamentos que ya confían en Delfín Check-in para su gestión diaria.</p>
       <div class="testimonials">
-        <div class="testimonial">
-          <div class="testimonial-text">Ahora no tengo que hacer el check‑in: está todo automatizado. Antes tardaba más de 10 minutos por huésped; ahora es automático y se envía de manera automática. Los huéspedes llegan con la documentación completa y el parte se envía al Ministerio sin complicaciones.</div>
-          <div class="testimonial-author">María González</div>
-          <div class="testimonial-role">Gerente, Hostal Centro Málaga</div>
+        <div class="testimonial" style="background: linear-gradient(135deg, rgba(68,192,255,0.1) 0%, rgba(124,240,124,0.1) 100%); border: 2px solid rgba(68,192,255,0.3);">
+          <div class="testimonial-text" style="font-size: 18px; font-weight: 600; color: var(--text);">
+            "Estamos cansados de pagar cientos de euros al mes por sistemas complicados. Por eso estamos construyendo Delfín Check-in: 
+            <strong style="color: var(--brand);">gratis, simple y hecho por propietarios que entienden lo que realmente necesitas</strong>."
+          </div>
+          <div class="testimonial-author" style="margin-top: 16px; font-weight: 700;">El equipo de Delfín Check-in</div>
+          <div class="testimonial-role">Propietarios de alojamientos turísticos</div>
         </div>
         <div class="testimonial">
-          <div class="testimonial-text">La gestión manual es perfecta para nosotros, tenemos control total. El sistema es intuitivo y nos permite gestionar todo desde un solo lugar sin complicaciones.</div>
-          <div class="testimonial-author">Carlos Ruiz</div>
-          <div class="testimonial-role">Propietario, Apartamentos Costa del Sol</div>
+          <div class="testimonial-text">
+            "La idea es simple: un PMS que funcione, que sea fácil de usar y que no cueste un ojo de la cara. 
+            <strong>Eso es lo que estamos construyendo.</strong>"
+          </div>
+          <div class="testimonial-author">Nuestra promesa</div>
+          <div class="testimonial-role">Para todos los propietarios</div>
         </div>
         <div class="testimonial">
-          <div class="testimonial-text">La exportación para la renta me ahorra horas cada mes. Un solo CSV con todos los datos. Mi asesor está encantado con la organización.</div>
-          <div class="testimonial-author">Ana Martín</div>
-          <div class="testimonial-role">Administradora, Pensión La Playa</div>
+          <div class="testimonial-text">
+            "Las apps móviles están en desarrollo. Las integraciones están en desarrollo. 
+            Pero el core del PMS: <strong>gestionar reservas y habitaciones de forma simple y gratis</strong>, eso es lo primero."
+          </div>
+          <div class="testimonial-author">Nuestro enfoque</div>
+          <div class="testimonial-role">Lo esencial primero, el resto viene después</div>
         </div>
       </div>
     </section>
