feat: Actualizar hero section con mensaje de hype y próximamente

--- a/index.html
+++ b/index.html
@@ -737,11 +737,11 @@
   <main>
     <section class="hero container" id="inicio">
       <div class="badges">
-        <span class="badge">Check‑in online</span>
-        <span class="badge">Gestión de reservas</span>
-        <span class="badge">Panel sencillo</span>
+        <span class="badge" style="background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); color: #92400e; font-weight: 800;">🚀 Próximamente</span>
+        <span class="badge" style="background: linear-gradient(135deg, #dcfce7 0%, #bbf7d0 100%); color: #166534; font-weight: 800;">💯 Completamente Gratis</span>
+        <span class="badge" style="background: linear-gradient(135deg, #e0e7ff 0%, #c7d2fe 100%); color: #3730a3; font-weight: 800;">👥 De Propietarios para Propietarios</span>
       </div>
-      <h1>Gestiona tu alojamiento sin complicarte, con reservas, habitaciones y check‑in online</h1>
+      <h1>El PMS que siempre quisiste tener. <strong style="color: var(--brand);">Gratis para siempre.</strong></h1>
       <p>Centraliza la operativa diaria: recopila documentación antes de la llegada y reduce el tiempo en recepción. Ideal para hoteles, hostales y apartamentos turísticos.</p>
       <div class="hero-card">
         <div class="checklist">
