feat: Completar actualización del hero con checklist detallado

--- a/index.html
+++ b/index.html
@@ -742,13 +742,19 @@
         <span class="badge" style="background: linear-gradient(135deg, #e0e7ff 0%, #c7d2fe 100%); color: #3730a3; font-weight: 800;">👥 De Propietarios para Propietarios</span>
       </div>
       <h1>El PMS que siempre quisiste tener. <strong style="color: var(--brand);">Gratis para siempre.</strong></h1>
-      <p>Centraliza la operativa diaria: recopila documentación antes de la llegada y reduce el tiempo en recepción. Ideal para hoteles, hostales y apartamentos turísticos.</p>
-      <div class="hero-card">
+      <p style="font-size: 20px; line-height: 1.6;">Estamos construyendo el sistema de gestión hotelera hecho <strong>por propietarios, para propietarios</strong>. Sin complicaciones, sin costes ocultos, sin límites. <strong>Próximamente disponible.</strong></p>
+      <div class="hero-card" style="background: linear-gradient(135deg, rgba(68,192,255,0.1) 0%, rgba(124,240,124,0.1) 100%); border: 2px solid rgba(68,192,255,0.3);">
+        <div style="text-align: center; margin-bottom: 20px;">
+          <h2 style="margin: 0 0 10px; font-size: 24px; color: var(--brand);">🎯 Todo lo que necesitas, en un solo lugar</h2>
+          <p style="color: var(--muted); margin: 0;">Desarrollado por propietarios que conocen tus necesidades reales</p>
+        </div>
         <div class="checklist">
-          <div class="check"><i>✔</i> Check‑in online con verificación de datos.</div>
-          <div class="check"><i>✔</i> Gestión de habitaciones, tarifas y disponibilidad.</div>
-          <div class="check"><i>✔</i> Informes y exportación.</div>
-          <div class="check"><i>✔</i> Dashboard de reservas.</div>
+          <div class="check"><i>✔</i> <strong>Motor de reservas completo</strong> - Gestiona todas tus reservas desde un panel intuitivo</div>
+          <div class="check"><i>✔</i> <strong>Gestión de habitaciones</strong> - Asigna, organiza y controla tu inventario</div>
+          <div class="check"><i>✔</i> <strong>Check-in digital</strong> - Módulo opcional por 8€/mes (próximamente)</div>
+          <div class="check"><i>✔</i> <strong>App móvil</strong> - iOS y Android en desarrollo (próximamente)</div>
+          <div class="check"><i>✔</i> <strong>Exportación de datos</strong> - CSV/Excel para contabilidad</div>
+          <div class="check"><i>✔</i> <strong>100% Gratis</strong> - Sin costes ocultos, sin límites de tiempo</div>
         </div>
       </div>
       <div class="logos">
