fix: Eliminar referencias a Booking/Airbnb y aclarar check-in siempre 8€/mes
- Eliminados logos de Booking, Airbnb, Expedia, Vrbo
- Eliminadas referencias a OTAs e integraciones
- Aclarado que check-in digital SIEMPRE costará 8€/mes (no gratis)
- Especificado que check-in es para envío al Ministerio del Interior
- Actualizadas FAQs eliminando channel manager e integraciones
- Mensaje claro: PMS gratis, check-in 8€/mes siempre

--- a/index.html
+++ b/index.html
@@ -751,28 +751,10 @@
         <div class="checklist">
           <div class="check"><i>✔</i> <strong>Motor de reservas completo</strong> - Gestiona todas tus reservas desde un panel intuitivo</div>
           <div class="check"><i>✔</i> <strong>Gestión de habitaciones</strong> - Asigna, organiza y controla tu inventario</div>
-          <div class="check"><i>✔</i> <strong>Check-in digital</strong> - Módulo opcional por 8€/mes (próximamente)</div>
+          <div class="check"><i>✔</i> <strong>Check-in digital</strong> - Envío al Ministerio del Interior (8€/mes, siempre de pago)</div>
           <div class="check"><i>✔</i> <strong>App móvil</strong> - iOS y Android en desarrollo (próximamente)</div>
           <div class="check"><i>✔</i> <strong>Exportación de datos</strong> - CSV/Excel para contabilidad</div>
           <div class="check"><i>✔</i> <strong>100% Gratis</strong> - Sin costes ocultos, sin límites de tiempo</div>
-        </div>
-      </div>
-      <div class="logos">
-        <div class="brand-box">
-          <div class="brand-name">Booking</div>
-          <img alt="Logo Booking" src="https://upload.wikimedia.org/wikipedia/commons/b/be/Booking.com_logo.svg">
-        </div>
-        <div class="brand-box">
-          <div class="brand-name">Airbnb</div>
-          <img alt="Logo Airbnb" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_Bélo.svg">
-        </div>
-        <div class="brand-box">
-          <div class="brand-name">Expedia</div>
-          <img alt="Logo Expedia" src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Expedia_Logo_2023.svg">
-        </div>
-        <div class="brand-box">
-          <div class="brand-name">Vrbo</div>
-          <img alt="Logo Vrbo" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Vrbo.svg">
         </div>
       </div>
       
@@ -803,7 +785,7 @@
         <div>
           <h2 id="microsite-title" style="margin: 0 0 16px; font-size: clamp(28px, 4vw, 40px); color: #1d4ed8;">Microsite propio para reservas directas</h2>
           <p style="margin: 0 0 20px; font-size: 17px; line-height: 1.6; color: #475569; max-width: 560px;">
-            Crea en minutos una página pública para tu alojamiento, comparte el enlace en redes o con tus huéspedes y recibe reservas directas sin depender de Booking o Airbnb. 
+            Crea en minutos una página pública para tu alojamiento, comparte el enlace en redes o con tus huéspedes y recibe reservas directas. 
             Con nuestro sistema de <strong style="color:#0f172a;">pago directo</strong> las comisiones se reducen a la mitad y el dinero entra en tu cuenta bancaria sin esperas.
           </p>
 
@@ -819,7 +801,7 @@
               <span style="font-size:18px;">💳</span>
               <div>
                 <strong style="color:#0f172a;">Pagos directos con comisiones mínimas</strong>
-                <p style="margin:4px 0 0; color:#64748b;">Integra el cobro seguro con Stripe y ahorra hasta un 50% de comisiones frente a las OTAs tradicionales.</p>
+                <p style="margin:4px 0 0; color:#64748b;">Integra el cobro seguro con Stripe y recibe pagos directos de tus huéspedes.</p>
               </div>
             </div>
             <div style="display:flex; gap:10px; align-items:flex-start;">
@@ -876,7 +858,7 @@
           <span style="background: rgba(37,99,235,0.1); color: #1d4ed8; font-weight: 700; font-size: 14px; padding: 6px 14px; border-radius: 999px;">Pagos directos</span>
           <h2 id="links-title" style="margin: 0; font-size: clamp(26px, 4vw, 36px); color: #0f172a;">Crea enlaces de cobro personalizados en segundos</h2>
           <p style="margin: 0; font-size: 18px; color: #475569; max-width: 720px; line-height: 1.6;">
-            Define las fechas de estancia, introduce el importe que has acordado con tu huésped y genera un enlace único de pago. Lo compartes por WhatsApp o email y el huésped paga de forma segura. El dinero aterriza en tu cuenta bancaria sin esperar a liquidaciones de Booking o Airbnb.
+            Define las fechas de estancia, introduce el importe que has acordado con tu huésped y genera un enlace único de pago. Lo compartes por WhatsApp o email y el huésped paga de forma segura. El dinero aterriza directamente en tu cuenta bancaria.
           </p>
         </div>
 
@@ -1096,7 +1078,7 @@
             <div style="background: #f59e0b; color: white; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 12px; font-weight: bold;">3</div>
             <h3 style="margin: 0; color: #d97706; font-size: 18px;">Pre‑check‑in online</h3>
           </div>
-          <p style="margin: 0; color: #64748b; line-height: 1.5;">Módulo de check-in digital disponible próximamente (8€/mes). Permite a tus huéspedes completar su información antes de llegar.</p>
+          <p style="margin: 0; color: #64748b; line-height: 1.5;">Módulo de check-in digital (próximamente): Permite a tus huéspedes completar su información y envía automáticamente al Ministerio del Interior de España. <strong>Coste: 8€/mes (siempre de pago)</strong>.</p>
         </div>
 
         <div class="feature-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); border-left: 4px solid #8b5cf6; transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);">
@@ -1124,7 +1106,7 @@
         </div>
       </div>
       <div class="note" style="margin-top:12px; padding:12px; background: linear-gradient(135deg, #fef3c7 0%, #fde68a 100%); border:2px solid #f59e0b; border-radius:8px;">
-        <strong>🚀 En desarrollo:</strong> Estamos trabajando en integraciones con Booking, Airbnb y otras OTAs mediante iCal. Las aplicaciones móviles también están en desarrollo. <strong>Regístrate para ser de los primeros en probarlo cuando esté listo.</strong>
+        <strong>🚀 En desarrollo:</strong> Las aplicaciones móviles están en desarrollo. <strong>Regístrate para ser de los primeros en probarlo cuando esté listo.</strong>
       </div>
     </section>
 
@@ -1157,10 +1139,11 @@
         </p>
         <p style="color: rgba(255,255,255,0.9); font-size: 18px; margin-top: 12px; line-height: 1.6;">
           Estamos en la fase final de desarrollo. <strong>Regístrate ahora</strong> y sé de los primeros en probarlo cuando lancemos. 
-          <br><strong style="font-size: 20px;">Los primeros usuarios lo tendrán gratis, incluyendo el módulo de check-in.</strong>
+          <br><strong style="font-size: 20px;">Los primeros usuarios tendrán el PMS completo gratis para siempre.</strong>
+          <br><span style="font-size: 16px; opacity: 0.9;">El módulo de check-in digital (envío al Ministerio del Interior) siempre costará 8€/mes.</span>
         </p>
         <div style="margin-top: 24px; padding: 16px; background: rgba(255,255,255,0.15); border-radius: 12px; backdrop-filter: blur(10px);">
-          <p style="margin: 0; font-size: 16px; font-weight: 600;">📱 Apps móviles en desarrollo | 🔄 Integraciones próximamente | 💯 100% Gratis</p>
+          <p style="margin: 0; font-size: 16px; font-weight: 600;">📱 Apps móviles en desarrollo | 💯 PMS 100% Gratis | 💰 Check-in: 8€/mes</p>
         </div>
       </div>
       
@@ -1222,10 +1205,10 @@
                 <li><strong>✅ Exportación de datos</strong> - CSV/Excel</li>
                 <li><strong>✅ Panel de administración</strong> - Intuitivo y potente</li>
                 <li><strong>✅ Soporte por email</strong> - Siempre disponible</li>
-                <li><strong>🔄 Check-in digital</strong> - 8€/mes (próximamente, gratis para primeros usuarios)</li>
+                <li><strong>💰 Check-in digital</strong> - Envío al Ministerio del Interior: 8€/mes (siempre de pago)</li>
                 <li><strong>🔄 App móvil</strong> - iOS y Android (en desarrollo)</li>
-                <li><strong>🔄 Integraciones OTA</strong> - Booking, Airbnb (próximamente)</li>
-                <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid #bae6fd;"><strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: TODO GRATIS (incluyendo check-in)</strong></li>
+                <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid #bae6fd;"><strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: PMS completo gratis para siempre</strong></li>
+                <li style="color: #64748b; font-size: 13px; margin-top: 8px;">* El módulo de check-in digital (envío al Ministerio del Interior) siempre tendrá un coste de 8€/mes</li>
               </ul>
             </div>
           </div>
@@ -1311,7 +1294,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-text">
-            "Las apps móviles están en desarrollo. Las integraciones están en desarrollo. 
+            "Las apps móviles están en desarrollo. 
             Pero el core del PMS: <strong>gestionar reservas y habitaciones de forma simple y gratis</strong>, eso es lo primero."
           </div>
           <div class="testimonial-author">Nuestro enfoque</div>
@@ -1330,11 +1313,11 @@
         </p>
       </details>
       <details>
-        <summary>¿Incluye channel manager?</summary>
+        <summary>¿Cómo funciona el módulo de check-in digital?</summary>
         <p>
-          Trabajamos con conectores para sincronizar disponibilidad, tarifas y reservas con los principales portales (p. ej., Booking.com, Airbnb, Expedia). 
-          La activación depende de tu mix de canales y del plan contratado. Si ya tienes un channel manager, podemos integrarnos para evitar duplicidades. 
-          Te asesoramos en la configuración inicial para minimizar overbookings y mantener inventario unificado.
+          El módulo de check-in digital permite a tus huéspedes completar su información antes de llegar y envía automáticamente 
+          los registros al Ministerio del Interior de España según la normativa vigente. 
+          <strong>Este módulo siempre tendrá un coste de 8€ al mes</strong>, independientemente de si eres usuario temprano o no.
         </p>
       </details>
       <details>
@@ -1368,11 +1351,11 @@
         </p>
       </details>
       <details>
-        <summary>¿Cómo se integra con mi sistema actual?</summary>
+        <summary>¿Qué incluye el PMS gratuito?</summary>
         <p>
-          Delfín Check-in se conecta con los principales PMS (Property Management Systems) y channel managers como Hotelogix, 
-          Little Hotelier, SiteMinder y otros. También ofrecemos APIs para integraciones personalizadas y sincronización 
-          en tiempo real de reservas, precios y disponibilidad.
+          El PMS gratuito incluye: gestión completa de reservas, gestión de habitaciones, exportación de datos (CSV/Excel), 
+          panel de administración y soporte por email. El módulo de check-in digital (envío al Ministerio del Interior) 
+          tiene un coste de 8€/mes y es opcional.
         </p>
       </details>
       <details>
@@ -1392,11 +1375,10 @@
         </p>
       </details>
       <details>
-        <summary>¿Cómo funciona la sincronización de calendarios?</summary>
+        <summary>¿Puedo exportar mis datos?</summary>
         <p>
-          Nuestro sistema sincroniza automáticamente con Google Calendar, Outlook y otros calendarios populares. 
-          Las reservas se actualizan en tiempo real, evitando overbookings y permitiendo gestionar tu disponibilidad 
-          desde cualquier dispositivo o plataforma.
+          Sí, puedes exportar todos tus datos en formato CSV/Excel para contabilidad, declaración de renta o cualquier otro uso. 
+          Los datos están siempre disponibles para exportación sin restricciones.
         </p>
       </details>
       <details>
@@ -1418,8 +1400,8 @@
       <details>
         <summary>¿Cuándo estará disponible el módulo de check-in?</summary>
         <p>
-          Estamos en fase de pre-lanzamiento. El módulo de check-in estará disponible próximamente con un coste de 8€ al mes. 
-          Te avisaremos por email cuando el módulo de check-in esté disponible. Los primeros usuarios podrán probarlo gratis.
+          Estamos en fase de pre-lanzamiento. El módulo de check-in digital (envío al Ministerio del Interior) estará disponible próximamente. 
+          <strong>Este módulo siempre tendrá un coste de 8€ al mes</strong>, sin excepciones. Te avisaremos por email cuando esté disponible.
         </p>
       </details>
       <details>
