feat: Añadir transparencia total sobre planes y anuncios
- Nueva sección de Planes con 3 opciones claras
- Plan Gratuito: explicado que se financia con anuncios elegantes
- Plan Check-in: 8€/mes siempre, con cumplimiento legal
- Plan Pro: próximamente
- FAQs actualizadas con transparencia total
- Footer con enlaces legales y aclaración sobre costes
- Mensaje claro: qué incluye y qué NO incluye cada plan
- Sin ambigüedades, sin sorpresas, legalmente protegido

--- a/index.html
+++ b/index.html
@@ -1129,6 +1129,106 @@
       </div>
     </section>
 
+    <!-- Planes y Precios -->
+    <section id="planes" class="section container">
+      <h2 style="text-align: center; margin-bottom: 16px; font-size: 36px; font-weight: 800;">Planes claros y transparentes</h2>
+      <p class="lead" style="text-align: center; margin-bottom: 40px; font-size: 18px;">
+        Sin sorpresas, sin letra pequeña. Sabes exactamente qué obtienes y qué cuesta.
+      </p>
+      
+      <div class="pricing" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 24px; max-width: 1200px; margin: 0 auto;">
+        <!-- Plan Gratuito -->
+        <article class="card" style="border: 2px solid #e2e8f0; position: relative;">
+          <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: linear-gradient(135deg, #dcfce7 0%, #bbf7d0 100%); color: #166534; padding: 6px 16px; border-radius: 20px; font-size: 12px; font-weight: 700;">Recomendado para empezar</div>
+          <h3 style="margin-top: 20px; font-size: 24px; font-weight: 800;">Plan Gratuito</h3>
+          <div class="price" style="margin: 16px 0;">
+            <strong style="font-size: 42px; color: #16a34a;">0€</strong>
+            <small style="font-size: 16px; color: #64748b;">/mes para siempre</small>
+          </div>
+          <p style="color: #64748b; font-size: 14px; margin-bottom: 20px; padding: 12px; background: #f0f9ff; border-radius: 8px; border-left: 3px solid #2563eb;">
+            <strong>💡 Financiado con anuncios elegantes y discretos</strong><br>
+            El plan gratuito se sostiene mediante publicidad no intrusiva. Sin coste para ti.
+          </p>
+          <ul class="features" style="margin: 20px 0;">
+            <li>✅ Gestión completa de reservas</li>
+            <li>✅ Gestión de habitaciones</li>
+            <li>✅ Exportación de datos (CSV/Excel)</li>
+            <li>✅ Panel de administración</li>
+            <li>✅ Soporte por email</li>
+            <li>✅ App móvil (próximamente)</li>
+            <li>⚠️ Anuncios discretos en el panel</li>
+            <li>❌ Check-in digital (no incluido)</li>
+            <li>❌ Envío automático al Ministerio (no incluido)</li>
+          </ul>
+          <div class="cta" style="margin-top: 24px;">
+            <a href="#registro" class="btn primary" style="width: 100%; text-align: center; padding: 16px; font-size: 18px; font-weight: 700;">Empezar Gratis</a>
+          </div>
+        </article>
+
+        <!-- Plan Check-in -->
+        <article class="card" style="border: 2px solid #2563eb; position: relative; background: linear-gradient(135deg, #f0f9ff 0%, #e0f2fe 100%);">
+          <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); color: white; padding: 6px 16px; border-radius: 20px; font-size: 12px; font-weight: 700;">Más Popular</div>
+          <h3 style="margin-top: 20px; font-size: 24px; font-weight: 800; color: #1e40af;">Plan Check-in</h3>
+          <div class="price" style="margin: 16px 0;">
+            <strong style="font-size: 42px; color: #2563eb;">8€</strong>
+            <small style="font-size: 16px; color: #64748b;">/mes</small>
+          </div>
+          <p style="color: #64748b; font-size: 14px; margin-bottom: 20px;">
+            Incluye todo el Plan Gratuito, más:
+          </p>
+          <ul class="features" style="margin: 20px 0;">
+            <li>✅ Todo lo del Plan Gratuito</li>
+            <li>✅ <strong>Check-in digital completo</strong></li>
+            <li>✅ <strong>Envío automático al Ministerio del Interior</strong></li>
+            <li>✅ <strong>Registro de viajeros (MIR)</strong></li>
+            <li>✅ <strong>Cumplimiento normativo RD 933/2021</strong></li>
+            <li>✅ Sin anuncios</li>
+            <li>✅ Soporte prioritario</li>
+          </ul>
+          <div class="cta" style="margin-top: 24px;">
+            <a href="#registro" class="btn primary" style="width: 100%; text-align: center; padding: 16px; font-size: 18px; font-weight: 700; background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%);">Contratar Check-in</a>
+          </div>
+          <p class="note" style="margin-top: 12px; text-align: center; font-size: 12px;">
+            Cumplimiento legal garantizado
+          </p>
+        </article>
+
+        <!-- Plan Pro (futuro) -->
+        <article class="card" style="border: 2px solid #e2e8f0; position: relative; opacity: 0.8;">
+          <div style="position: absolute; top: -12px; left: 50%; transform: translateX(-50%); background: #fef3c7; color: #92400e; padding: 6px 16px; border-radius: 20px; font-size: 12px; font-weight: 700;">Próximamente</div>
+          <h3 style="margin-top: 20px; font-size: 24px; font-weight: 800;">Plan Pro</h3>
+          <div class="price" style="margin: 16px 0;">
+            <strong style="font-size: 42px; color: #64748b;">29,99€</strong>
+            <small style="font-size: 16px; color: #64748b;">/mes</small>
+          </div>
+          <p style="color: #64748b; font-size: 14px; margin-bottom: 20px;">
+            PMS completo con todas las funciones avanzadas
+          </p>
+          <ul class="features" style="margin: 20px 0;">
+            <li>✅ Todo lo del Plan Check-in</li>
+            <li>✅ Funciones avanzadas</li>
+            <li>✅ Automatizaciones</li>
+            <li>✅ Reportes avanzados</li>
+            <li>✅ Soporte dedicado</li>
+            <li>🔄 Disponible próximamente</li>
+          </ul>
+          <div class="cta" style="margin-top: 24px;">
+            <button class="btn" style="width: 100%; padding: 16px; font-size: 18px; font-weight: 700; opacity: 0.6; cursor: not-allowed;" disabled>Próximamente</button>
+          </div>
+        </article>
+      </div>
+
+      <div style="margin-top: 40px; padding: 24px; background: #f0f9ff; border-radius: 16px; border-left: 4px solid #2563eb; max-width: 900px; margin-left: auto; margin-right: auto;">
+        <h4 style="margin: 0 0 12px 0; color: #1e40af; font-weight: 700; font-size: 18px;">ℹ️ Transparencia total</h4>
+        <ul style="margin: 0; padding-left: 20px; color: #1e40af; font-size: 15px; line-height: 1.8;">
+          <li><strong>Plan Gratuito:</strong> Se financia con anuncios elegantes y discretos. Sin coste para ti, sin límites de tiempo.</li>
+          <li><strong>Plan Check-in:</strong> Siempre 8€/mes. Incluye envío automático al Ministerio del Interior. Sin anuncios.</li>
+          <li><strong>Cumplimiento legal:</strong> El Plan Check-in garantiza el cumplimiento del RD 933/2021 y normativas aplicables.</li>
+          <li><strong>Sin sorpresas:</strong> Sabes exactamente qué obtienes y qué cuesta desde el primer día.</li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Registro Pre-lanzamiento -->
     <section id="registro" class="section container" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
       <div style="text-align: center; color: white; margin-bottom: 32px;">
@@ -1198,17 +1298,21 @@
           <div style="display: flex; align-items: start; gap: 12px;">
             <div style="font-size: 24px;">ℹ️</div>
             <div>
-              <h4 style="margin: 0 0 8px 0; color: #1e40af; font-weight: 700; font-size: 18px;">✨ Lo que incluye el PMS (gratis para siempre)</h4>
+              <h4 style="margin: 0 0 8px 0; color: #1e40af; font-weight: 700; font-size: 18px;">✨ Plan Gratuito - Incluye todo esto</h4>
               <ul style="margin: 0; padding-left: 20px; color: #1e40af; font-size: 15px; line-height: 2;">
                 <li><strong>✅ Gestión completa de reservas</strong> - Sin límites</li>
                 <li><strong>✅ Gestión de habitaciones</strong> - Control total</li>
                 <li><strong>✅ Exportación de datos</strong> - CSV/Excel</li>
                 <li><strong>✅ Panel de administración</strong> - Intuitivo y potente</li>
                 <li><strong>✅ Soporte por email</strong> - Siempre disponible</li>
-                <li><strong>💰 Check-in digital</strong> - Envío al Ministerio del Interior: 8€/mes (siempre de pago)</li>
-                <li><strong>🔄 App móvil</strong> - iOS y Android (en desarrollo)</li>
-                <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid #bae6fd;"><strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: PMS completo gratis para siempre</strong></li>
-                <li style="color: #64748b; font-size: 13px; margin-top: 8px;">* El módulo de check-in digital (envío al Ministerio del Interior) siempre tendrá un coste de 8€/mes</li>
+                <li><strong>✅ App móvil</strong> - iOS y Android (próximamente)</li>
+                <li><strong>💡 Financiado con anuncios</strong> - Elegantes y discretos, sin coste para ti</li>
+                <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid #bae6fd;">
+                  <strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: PMS completo gratis para siempre</strong>
+                </li>
+                <li style="color: #dc2626; font-size: 14px; margin-top: 12px; font-weight: 600;">
+                  ❌ <strong>No incluye:</strong> Check-in digital (8€/mes) ni envío al Ministerio del Interior
+                </li>
               </ul>
             </div>
           </div>
@@ -1316,8 +1420,14 @@
         <summary>¿Cómo funciona el módulo de check-in digital?</summary>
         <p>
           El módulo de check-in digital permite a tus huéspedes completar su información antes de llegar y envía automáticamente 
-          los registros al Ministerio del Interior de España según la normativa vigente. 
-          <strong>Este módulo siempre tendrá un coste de 8€ al mes</strong>, independientemente de si eres usuario temprano o no.
+          los registros al <strong>Ministerio del Interior de España</strong> según la normativa vigente (RD 933/2021).
+          <br><br>
+          <strong>Este módulo siempre tendrá un coste de 8€ al mes</strong>, sin excepciones. Incluye:
+          <br>• Formulario de check-in digital para huéspedes
+          <br>• Envío automático al Ministerio del Interior
+          <br>• Cumplimiento normativo garantizado
+          <br>• Sin anuncios en el panel
+          <br>• Soporte prioritario
         </p>
       </details>
       <details>
@@ -1351,11 +1461,23 @@
         </p>
       </details>
       <details>
-        <summary>¿Qué incluye el PMS gratuito?</summary>
+        <summary>¿Qué incluye el Plan Gratuito y qué no?</summary>
         <p>
-          El PMS gratuito incluye: gestión completa de reservas, gestión de habitaciones, exportación de datos (CSV/Excel), 
-          panel de administración y soporte por email. El módulo de check-in digital (envío al Ministerio del Interior) 
-          tiene un coste de 8€/mes y es opcional.
+          <strong>✅ Incluye (gratis para siempre):</strong>
+          <br>• Gestión completa de reservas
+          <br>• Gestión de habitaciones
+          <br>• Exportación de datos (CSV/Excel)
+          <br>• Panel de administración completo
+          <br>• Soporte por email
+          <br>• App móvil (próximamente)
+          <br>• Financiado con anuncios elegantes y discretos
+          <br><br>
+          <strong>❌ No incluye:</strong>
+          <br>• Check-in digital (8€/mes)
+          <br>• Envío automático al Ministerio del Interior
+          <br>• Registro de viajeros (MIR) con envío oficial
+          <br><br>
+          El Plan Gratuito te permite gestionar tu alojamiento sin coste. Para cumplimiento legal completo, necesitas el Plan Check-in (8€/mes).
         </p>
       </details>
       <details>
@@ -1408,7 +1530,9 @@
         <summary>¿Puedo probar el sistema?</summary>
         <p>
           Estamos en fase de pre-lanzamiento. Regístrate con tu email y te avisaremos cuando esté listo. 
-          Los primeros usuarios podrán probar el PMS completo de forma gratuita, incluyendo el módulo de check-in.
+          Los primeros usuarios podrán probar el <strong>Plan Gratuito completo</strong> de forma gratuita para siempre.
+          <br><br>
+          El módulo de check-in digital (envío al Ministerio del Interior) siempre tendrá un coste de 8€/mes, incluso para primeros usuarios.
         </p>
       </details>
       <details>
