feat: Completar sección de planes y actualizar FAQs
- Añadida sección completa de Planes antes del registro
- Plan Gratuito: explicado con anuncios elegantes y discretos
- Plan Check-in: 8€/mes siempre, cumplimiento legal
- Plan Pro: próximamente
- Actualizada FAQ sobre '¿Es realmente gratis?' con transparencia total
- Footer actualizado con enlaces legales y aclaración sobre costes
- Mensaje claro sobre qué incluye y qué NO incluye cada plan

--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@
           <h3 style="color: #0f172a; font-size: 28px; font-weight: 800; margin-bottom: 8px;">Sé de los primeros</h3>
           <p style="color: #64748b; font-size: 18px; line-height: 1.6;">
             Únete a la lista de espera y recibe acceso prioritario cuando lancemos. 
-            <strong style="color: #2563eb;">Los primeros usuarios lo tendrán todo gratis.</strong>
+            <strong style="color: #2563eb;">Los primeros usuarios tendrán el Plan Gratuito completo para siempre.</strong>
           </p>
         </div>
         
@@ -1412,8 +1412,12 @@
       <details>
         <summary>¿Es realmente gratis?</summary>
         <p>
-          Sí, Delfín Check-in es completamente gratuito para siempre. No hay costes ocultos, no hay límites de tiempo, y no necesitas cancelar nada porque nunca te cobraremos. 
-          El PMS es completamente gratis para siempre. Incluye gestión de reservas, habitaciones, app móvil y más. El módulo de check-in tiene un coste de 8€ al mes (opcional).
+          <strong>Sí, el Plan Gratuito es completamente gratis para siempre.</strong> Se financia mediante anuncios elegantes y discretos en el panel de administración. 
+          No hay costes ocultos, no hay límites de tiempo, y no necesitas cancelar nada porque nunca te cobraremos por el plan gratuito.
+          <br><br>
+          <strong>Incluye:</strong> Gestión de reservas, habitaciones, exportación de datos, panel completo y app móvil (próximamente).
+          <br><br>
+          <strong>No incluye:</strong> El módulo de check-in digital (envío al Ministerio del Interior) que siempre costará 8€/mes.
         </p>
       </details>
       <details>
