fix: Actualizar footer con enlaces legales y transparencia sobre costes

--- a/index.html
+++ b/index.html
@@ -1676,7 +1676,18 @@
           </div>
         </div>
         <div style="border-top: 1px solid var(--border); padding-top: 15px; text-align: center; color: var(--muted);">
-          © <span id="year"></span> Delfín Check‑in · <a href="#registro" style="color: var(--brand);">Registro Gratis</a>
+          <p style="margin: 0 0 12px; font-size: 14px;">
+            © <span id="year"></span> Delfín Check‑in · <a href="#registro" style="color: var(--brand);">Registro Gratis</a>
+          </p>
+          <p style="margin: 0; font-size: 12px; color: #94a3b8; line-height: 1.8;">
+            <a href="politica-privacidad.html" style="color: var(--brand); margin: 0 8px;">Política de Privacidad</a> ·
+            <a href="terminos-servicio.html" style="color: var(--brand); margin: 0 8px;">Términos de Servicio</a> ·
+            <a href="aviso-legal.html" style="color: var(--brand); margin: 0 8px;">Aviso Legal</a>
+            <br style="margin: 8px 0;">
+            <span style="font-size: 11px; display: block; margin-top: 8px;">
+              El Plan Gratuito se financia con anuncios elegantes y discretos. El Plan Check-in tiene un coste de 8€/mes. Sin costes ocultos.
+            </span>
+          </p>
         </div>
       </div>
     </footer>
