--- a/index.html
+++ b/index.html
@@ -1110,6 +1110,82 @@
       </div>
     </section>
 
+    <!-- Preview de la App Móvil -->
+    <section id="app-preview" class="section container" style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%); border-radius: 24px; padding: 48px 24px; margin: 48px auto;">
+      <div style="text-align: center; margin-bottom: 40px;">
+        <span style="background: rgba(124,58,237,0.1); color: #5b21b6; font-weight: 700; font-size: 14px; padding: 6px 14px; border-radius: 999px; display: inline-block; margin-bottom: 16px;">📱 Vista Previa</span>
+        <h2 style="margin: 0 0 16px; font-size: clamp(32px, 5vw, 48px); font-weight: 800; color: #0f172a;">Así se ve nuestra app móvil</h2>
+        <p class="lead" style="font-size: 18px; color: #475569; max-width: 700px; margin: 0 auto;">
+          Gestiona tu alojamiento desde cualquier lugar. Reservas, calendario, huéspedes y pagos, todo en la palma de tu mano.
+        </p>
+      </div>
+
+      <!-- Carrusel de capturas de pantalla -->
+      <div style="max-width: 1200px; margin: 0 auto;">
+        <div id="appScreenshots" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 32px; margin-bottom: 40px;">
+          <!-- iPhone Frame Container -->
+          <div class="iphone-frame" style="position: relative; width: 100%; max-width: 320px; margin: 0 auto; padding: 12px; background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border-radius: 40px; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
+            <!-- iPhone Notch -->
+            <div style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 140px; height: 28px; background: #0f172a; border-radius: 0 0 20px 20px; z-index: 10;"></div>
+            <!-- Screen Content -->
+            <div style="background: white; border-radius: 28px; overflow: hidden; margin-top: 8px; box-shadow: inset 0 0 0 2px rgba(255,255,255,0.1);">
+              <img src="images/app-screenshots/inicio.png" alt="App móvil - Pantalla de inicio con lista de huéspedes" style="width: 100%; height: auto; display: block; object-fit: cover;" id="screenshot-1" onerror="this.src='https://via.placeholder.com/300x650/ffffff/2563eb?text=Pantalla+Inicio'">
+            </div>
+            <!-- Home Indicator -->
+            <div style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); width: 120px; height: 4px; background: rgba(255,255,255,0.3); border-radius: 2px;"></div>
+            <p style="text-align: center; margin-top: 16px; font-weight: 600; color: #0f172a; font-size: 14px;">Pantalla de Inicio</p>
+          </div>
+
+          <div class="iphone-frame" style="position: relative; width: 100%; max-width: 320px; margin: 0 auto; padding: 12px; background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border-radius: 40px; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
+            <div style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 140px; height: 28px; background: #0f172a; border-radius: 0 0 20px 20px; z-index: 10;"></div>
+            <div style="background: white; border-radius: 28px; overflow: hidden; margin-top: 8px; box-shadow: inset 0 0 0 2px rgba(255,255,255,0.1);">
+              <img src="images/app-screenshots/nueva-reserva.png" alt="App móvil - Modal de nueva reserva" style="width: 100%; height: auto; display: block; object-fit: cover;" id="screenshot-2" onerror="this.src='https://via.placeholder.com/300x650/ffffff/16a34a?text=Nueva+Reserva'">
+            </div>
+            <div style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); width: 120px; height: 4px; background: rgba(255,255,255,0.3); border-radius: 2px;"></div>
+            <p style="text-align: center; margin-top: 16px; font-weight: 600; color: #0f172a; font-size: 14px;">Nueva Reserva</p>
+          </div>
+
+          <div class="iphone-frame" style="position: relative; width: 100%; max-width: 320px; margin: 0 auto; padding: 12px; background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border-radius: 40px; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
+            <div style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 140px; height: 28px; background: #0f172a; border-radius: 0 0 20px 20px; z-index: 10;"></div>
+            <div style="background: white; border-radius: 28px; overflow: hidden; margin-top: 8px; box-shadow: inset 0 0 0 2px rgba(255,255,255,0.1);">
+              <img src="images/app-screenshots/reservas.png" alt="App móvil - Lista de reservas" style="width: 100%; height: auto; display: block; object-fit: cover;" id="screenshot-3" onerror="this.src='https://via.placeholder.com/300x650/ffffff/7c3aed?text=Lista+Reservas'">
+            </div>
+            <div style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); width: 120px; height: 4px; background: rgba(255,255,255,0.3); border-radius: 2px;"></div>
+            <p style="text-align: center; margin-top: 16px; font-weight: 600; color: #0f172a; font-size: 14px;">Lista de Reservas</p>
+          </div>
+
+          <div class="iphone-frame" style="position: relative; width: 100%; max-width: 320px; margin: 0 auto; padding: 12px; background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border-radius: 40px; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
+            <div style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 140px; height: 28px; background: #0f172a; border-radius: 0 0 20px 20px; z-index: 10;"></div>
+            <div style="background: white; border-radius: 28px; overflow: hidden; margin-top: 8px; box-shadow: inset 0 0 0 2px rgba(255,255,255,0.1);">
+              <img src="images/app-screenshots/calendario.png" alt="App móvil - Calendario con reservas" style="width: 100%; height: auto; display: block; object-fit: cover;" id="screenshot-4" onerror="this.src='https://via.placeholder.com/300x650/ffffff/ef4444?text=Calendario'">
+            </div>
+            <div style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); width: 120px; height: 4px; background: rgba(255,255,255,0.3); border-radius: 2px;"></div>
+            <p style="text-align: center; margin-top: 16px; font-weight: 600; color: #0f172a; font-size: 14px;">Calendario</p>
+          </div>
+
+          <div class="iphone-frame" style="position: relative; width: 100%; max-width: 320px; margin: 0 auto; padding: 12px; background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border-radius: 40px; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
+            <div style="position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 140px; height: 28px; background: #0f172a; border-radius: 0 0 20px 20px; z-index: 10;"></div>
+            <div style="background: white; border-radius: 28px; overflow: hidden; margin-top: 8px; box-shadow: inset 0 0 0 2px rgba(255,255,255,0.1);">
+              <img src="images/app-screenshots/enlaces-pago.png" alt="App móvil - Crear enlaces de pago" style="width: 100%; height: auto; display: block; object-fit: cover;" id="screenshot-5" onerror="this.src='https://via.placeholder.com/300x650/ffffff/2563eb?text=Enlaces+Pago'">
+            </div>
+            <div style="position: absolute; bottom: 8px; left: 50%; transform: translateX(-50%); width: 120px; height: 4px; background: rgba(255,255,255,0.3); border-radius: 2px;"></div>
+            <p style="text-align: center; margin-top: 16px; font-weight: 600; color: #0f172a; font-size: 14px;">Enlaces de Pago</p>
+          </div>
+        </div>
+
+        <!-- CTA Section -->
+        <div style="text-align: center; padding: 32px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+          <h3 style="margin: 0 0 12px; font-size: 24px; font-weight: 700; color: #0f172a;">¿Quieres probarla cuando esté lista?</h3>
+          <p style="margin: 0 0 24px; color: #64748b; font-size: 16px;">
+            Regístrate ahora y sé de los primeros en recibir acceso a la app móvil cuando lancemos.
+          </p>
+          <a href="#registro" class="btn primary" style="display: inline-block; padding: 16px 32px; font-size: 18px; font-weight: 700; text-decoration: none; border-radius: 12px; box-shadow: 0 4px 12px rgba(37, 99, 235, 0.3);">
+            🚀 Quiero probar la app
+          </a>
+        </div>
+      </div>
+    </section>
+
 
 
     <!-- Datos centralizados y descarga para renta anual -->
